--- a/friends.html
+++ b/friends.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2e9761c0ed.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Friends | KaKao Clone</title>
 </head>
 <body>
@@ -34,7 +35,7 @@
     </header>
     <main class="friends">
         <header class="friends__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend ">
                 <div class="friend__column">
                     <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar">
                     <div class="friend__content">
@@ -49,10 +50,10 @@
             </div>
         </header>
         <div class="friends__plus">
-            <h5 class="friends__plus-title">Plus friend</h5>
+            <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" alt="" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Jason
@@ -62,10 +63,10 @@
             </div>
         </div>
         <ul class="friends__list">
-            <h5 class="friends_title">Friends 14</h5>
+            <h5 class="friends__title">Friends 14</h5>
             <li class="friends__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" alt="" class="g-avatar friend__avatar">
+                    <img src="images/avatar.jpg" alt="" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Jason
