--- a/chat.html
+++ b/chat.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2e9761c0ed.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chat | KaKao Clone</title>
 </head>
-<body>
+<body class="chats-body">
     <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">12:41</span>
@@ -22,7 +23,7 @@
     <header class="header">
         <div class="header__header-column">
             <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
             <h1 class="header__title">Hyeji</h1>
         </div>
@@ -35,34 +36,52 @@
             </span>
         </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">
                 Friday, Januray 11, 2020
             </span>
-            <li class="incomming-message message">
-                <img src="images/avatar.jpg" alt="" class="g-avatar message__avatar">
+            <li class="incoming-message message">
+                <img src="images/avatar.jpg" alt="" class="m-avatar message__avatar">
                 <div class="message__content">
-                    <span class="message__author">Hyeji</span>
-                    <div class="message__bubble">
+                    <span class="message__bubble">
                         Congrats I love you!
-                    </div>
+                    </span>
+                    <span class="message__author">Hyeji</span>
                 </div>
                 <span class="message__timestamp"></span>
             </li>
-            <li class="incomming-message message">
+            <li class="sent-message message">
                 <span class="message__timestamp"></span>
                 <div class="message__content">
-                    <div class="message__bubble">
+                    <span class="message__bubble">
                         Thank you~
-                    </div>
+                    </span>
+                </div>
+            </li>
+            <li class="incoming-message message">
+                <img src="images/avatar.jpg" alt="" class="m-avatar message__avatar">
+                <div class="message__content">
+                    <span class="message__bubble">
+                        Congrats I love you!
+                    </span>
+                    <span class="message__author">Hyeji</span>
+                </div>
+                <span class="message__timestamp"></span>
+            </li>
+            <li class="sent-message message">
+                <span class="message__timestamp"></span>
+                <div class="message__content">
+                    <span class="message__bubble">
+                        Thank you~
+                    </span>
                 </div>
             </li>
         </ul>
     </main>
     <div class="chat__write">
         <div class="chat__write-column">
-            <i class="fas fa-plus-sqaure"></i>
+            <i class="far fa-plus-square"></i>
         </div>
         <div class="chat__write-column">
             <input type="text" placeholder="Send message" class="chat__write-input">
