--- a/more.html
+++ b/more.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2e9761c0ed.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <title>More | KaKao Clone</title>
 </head>
 <body>
@@ -87,19 +88,19 @@
             <ul class="more__suggestions-list">
                 <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
-                        <i class="fas fa-quote-right fa-2x"></i>
+                        <i class="fas fa-quote-right"></i>
                     </span>
                     <span class="suggestion__title">Kokoa Story</span>
                 </li>
                 <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
-                        <i class="fas fa-beer fa-2x"></i>
+                        <i class="fas fa-beer"></i>
                     </span>
                     <span class="suggestion__title">Kokoa Friends</span>
                 </li>
                 <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
-                        <i class="fas fa-gamepad fa-2x"></i>
+                        <i class="fas fa-gamepad"></i>
                     </span>
                     <span class="suggestion__title">Friends Gem</span>
                 </li>
